--- a/src/app/sentiment-analysis/sentiment-analysis.component.html
+++ b/src/app/sentiment-analysis/sentiment-analysis.component.html
@@ -1,1 +1,15 @@
-<p>sentiment-analysis works!</p>
+<!-- <p>sentiment-analysis works!</p> -->
+<h4>Enter your text to see your mood</h4>
+<form action="/estimate" method="POST">
+    <div class="form-group">
+        <label for="review">Enter your review</label><br />
+        <textarea id="review" name="review" rows="4" cols="50" [(ngModel)]="textToAnalyzeValue">
+        </textarea>
+    </div>
+    <div class="form-group">
+        <button class="btn btn-primary" (click)="onAnalyze(textToAnalyzeValue)">Analyze</button>
+        <!-- <button  (click)="clickEvent()" >
+        Click Me</button>
+        <h2>{{msg}}</h2> -->
+    </div>
+</form>
