--- a/src/app/sentiment-analysis/sentiment-analysis.component.html
+++ b/src/app/sentiment-analysis/sentiment-analysis.component.html
@@ -3,7 +3,7 @@
 <form action="/estimate" method="POST">
     <div class="form-group">
         <label for="review">Enter your review</label><br />
-        <textarea id="review" name="review" rows="4" cols="50" [(ngModel)]="textToAnalyzeValue">
+        <textarea id="review" name="review" rows="4" cols="70" [(ngModel)]="textToAnalyzeValue">
         </textarea>
     </div>
     <div class="form-group">
@@ -11,5 +11,18 @@
         <!-- <button  (click)="clickEvent()" >
         Click Me</button>
         <h2>{{msg}}</h2> -->
+    </div>
+    <div *ngIf="resultAnalysis>=0">
+        <p>The value is {{resultAnalysis}}</p>
+        <div class="row">
+            <div class="col">
+                <i class="fa fa-frown-o"></i>
+                <progress  value="{{resultAnalysis}}" max="100"></progress>
+                <i class="fa fa-smile-o"></i>
+            </div>
+        </div>
+    </div>
+    <div *ngIf="resultAnalysis<0">
+        <p>Add a review to see what you think about it!</p>
     </div>
 </form>
