JPortella, web site, almost done, next step, create the load icon

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,16 @@
       <li class="nav-item">
         <button routerLink="text" class="m-1 btn btn-light btn-outline-primary">Sentiment Analysis</button>
       </li>
+      <li class="nav-item">
+        <button routerLink="authors" class="m-1 btn btn-light btn-outline-primary">About the authors</button>
+      </li>
+      <li class="nav-item">
+        <button routerLink="how-it-works" class="m-1 btn btn-light btn-outline-primary">Description</button>
+      </li>
+      <li class="nav-item">
+        <button routerLink="github" class="m-1 btn btn-light btn-outline-primary">Source code</button>
+      </li>
     </ul>
   </nav>
+  <router-outlet></router-outlet>
 </div>
-<router-outlet></router-outlet>
