--- a/src/app/sentiment-analysis/sentiment-analysis.component.html
+++ b/src/app/sentiment-analysis/sentiment-analysis.component.html
@@ -7,10 +7,7 @@
         </textarea>
     </div>
     <div class="form-group">
-        <button class="btn btn-primary" (click)="onAnalyze(textToAnalyzeValue)">Analyze</button>
-        <!-- <button  (click)="clickEvent()" >
-        Click Me</button>
-        <h2>{{msg}}</h2> -->
+        <button class="btn btn-primary" (click)="onAnalyze(textToAnalyzeValue)">Analyze it!</button>
     </div>
     <div *ngIf="resultAnalysis>=0">
         <p>The value is {{resultAnalysis}}</p>
